Clases comentadas y cambiados metodos getFirst() por get(0) etc